fix(): set z-index to images

--- a/src/styles/components/slide.styl
+++ b/src/styles/components/slide.styl
@@ -100,6 +100,7 @@
             position absolute
             bottom 11rem
             right -11rem
+            z-index 1
             width 60%
             animation-name shuttle-move
             animation-duration 3s
@@ -121,6 +122,7 @@
             position absolute
             bottom -6rem
             right -4rem
+            z-index 1
             width 26%
             animation-name astronaut-move
             animation-duration 3s
@@ -155,6 +157,7 @@
             position absolute
             bottom 0.5rem
             right -8rem
+            z-index 1
             width 50%
             will-change opacity
             animation-name sign-opacity
@@ -183,6 +186,7 @@
             position absolute
             top 0.5rem
             right 1rem
+            z-index 1
             width 30%
             opacity 0.7
             will-change opacity
